# a2a-google-calendar-agent

./: .env.example  LICENSE  README.md  __main__.py  pyproject.toml
a2a_google_calendar_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: auth.py  server_agent.py  server_executor.py  server_mcp.py
app/config/: settings.py
app/constants/: __init__.py
app/lib/llm/: __init__.py  base.py  groq.py  openai.py
app/types/: __init__.py
app/utils/: logger.py
cli/: __main__.py
